@@ -1,3 +1,7 @@
+2002-12-16  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/add_window.c (validate_transientfor):
+	do not ignore transientfor hint for iconified windows
 
 2002-12-12  Jason Weber <baboon@imonk.com>
 
